<resources>
    <string name="app_name">SpaceTrader</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="verify_password_hint">Verify Password</string>
    <string name="skill_points_label">Points Available:</string>
    <string name="pilot_label">Pilot</string>
    <string name="fighter_label">Fighter</string>
    <string name="trader_label">Trader</string>
    <string name="engineer_label">Engineer</string>
    <string name="difficulty_label">Choose Your Difficulty</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_prompt">sign in to continue</string>
    <string name="get_started">Get Started</string>
    <string name="play">Let\'s Play</string>
    <string name="create_account">New User? Create an account.</string>
    <string name="hey">Hey there,</string>
    <string name="create_account_prompt">let\'s create your account</string>
    <string name="error_password">Incorrect password.</string>
    <string name="error_username">That username doesn\'t exist.</string>
    <string name="create_commander">let\'s create a commander</string>
    <string name="commander_status_label">Commander Status</string>
    <string name="commander_status_label_small">Status</string>
    <string name="market_label">Market</string>
    <string name="map_label">Map</string>
    <string name="commander_status_text">here\'s your commander status</string>
    <string name="next">Next</string>
    <string name="temp_username">Hi Jameson,</string>
    <string name="cargo">this is your cargo</string>
    <string name="buy_cargo">Buy Cargo</string>
    <string name="sell_cargo">Sell Cargo</string>
    <string name="water_label">Water</string>
    <string name="buy_water_label">Water (30 cred)</string>
    <string name="furs_label">Furs</string>
    <string name="buy_furs_label">Furs (235 cred)</string>
    <string name="food_label">Food</string>
    <string name="buy_food_label">Food (145 cred)</string>
    <string name="ore_label">Ore</string>
    <string name="buy_ore_label">Ore (360 cred)</string>
    <string name="firearms_label">Firearms</string>
    <string name="buy_firearms_label">Firearms (450 cred)</string>
    <string name="buy_cargo_header">buy cargo here</string>
    <string name="sell_cargo_header">sell cargo here</string>
    <string name="credit_available">Credit Available:</string>
    <string name="credit_label">Current Credit:</string>
    <string name="games_label">Games</string>
    <string name="medicine_label">Medicine</string>
    <string name="machines_label">Machines</string>
    <string name="narcotics_label">Narcotic</string>
    <string name="robots_label">Robots</string>
    <string name="Travel_to_Solar_System">Please choose a Solar System, </string>
    <string name="fuel_canisters">Fuel canisters left</string>
</resources>
